5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1582_1330.log
== SUBMITION (2019-03-12 17:35:49) 
-- CODE:
round(250,  6)
-- EXECUTION TIME:
0.180494
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:36:07) 
-- CODE:
round(250,6)
-- EXECUTION TIME:
0.207587
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:36:16) 
-- CODE:
round(6,250)
-- EXECUTION TIME:
0.139013
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:38) 
-- CODE:
round(250, 0,6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(250, 0,6)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:37:42) 
-- CODE:
round(250, 0,6)
-- EXECUTION TIME:
0.181257
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    round(250, 0,6)
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:37:53) 
-- CODE:
round(250,6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(250, 0,6)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:37:56) 
-- CODE:
round(250,6)
-- EXECUTION TIME:
0.155019
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:17) 
-- CODE:
round(250/6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(250, 0,6)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:38:19) 
-- CODE:
round(250/6)
-- EXECUTION TIME:
0.211938
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:38:36) 
-- CODE:
print(250/6)
-- EXECUTION TIME:
0.172104
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:41) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:38:50) 
-- CODE:
print(250/6)
-- EXECUTION TIME:
0.154101
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:38:53) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:15) 
-- CODE:
round(250/47,6666)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:39:18) 
-- CODE:
round(250/47,6666)
-- EXECUTION TIME:
0.165431
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:39:30) 
-- CODE:
round(250/ 47,6666)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:25) 
-- CODE:
print(round(250, 47,66666))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(250, 47,66666))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:40:28) 
-- CODE:
print(round(250, 47,66666))
-- EXECUTION TIME:
0.167383
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    print(round(250, 47,66666))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:40:34) 
-- CODE:
print(round(250, 47,6))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(round(250, 47,6))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:40:39) 
-- CODE:
print(round(250, 47,6))
-- EXECUTION TIME:
0.190911
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1330/main.py", line 1, in <module>
    print(round(250, 47,6))
TypeError: round() takes at most 2 arguments (3 given)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:41:36) 
-- CODE:
print(250/6)
-- EXECUTION TIME:
0.177748
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.666666666666664
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:41:42) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:41:57) 
-- CODE:
round(250/41,6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:00) 
-- CODE:
round(250/41,6)
-- EXECUTION TIME:
0.17413
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:09) 
-- CODE:
round(250, 41,6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(250, 41,6)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:15) 
-- CODE:
round(41,6)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(250, 41,6)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:17) 
-- CODE:
round(41,6)
-- EXECUTION TIME:
0.130915
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:42:26) 
-- CODE:
round(41,66666)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    round(250, 41,6)
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:42:30) 
-- CODE:
round(41,66666)
-- EXECUTION TIME:
0.207021
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:44:39) 
-- CODE:
print(round(250/6, 2)
-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:44:42) 
-- CODE:
print(round(250/6, 2)
-- EXECUTION TIME:
0.160598
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:44:54) 
-- CODE:
print(round(250/6, 2)
-- EXECUTION TIME:
0.180302
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:45:02) 
-- CODE:
print(round(250/6, 2)
-- EXECUTION TIME:
0.204486
-- ERROR:
  File "/home/codebench/codes/1582/1330/main.py", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:45:20) 
-- CODE:
print(round(250/6, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:45:24) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.197807
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:53:48) 
-- CODE:
print(round(250/6, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:53:52) 
-- CODE:
print(round(250/6, 2))
-- EXECUTION TIME:
0.172823
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 08:21:41) 
-- CODE:
print(round(250/6, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:23:29) 
-- CODE:
print(round(250/6, 2))
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
